--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Github Pages test site</title>
+</head>
+
+<body>
+  <h1>Github Pages test site</h1>
+</body>
+</html>
